--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = packaging, pep8, py3pep8, py27, py32, py33, py34, pypy
+envlist = packaging, pep8, py3pep8, py27, py33, py34, pypy
 
 [testenv]
 deps =
