--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = unpaddedbase64
-version = 1.1.0
+version = 2.0.0rc1
 description = Unpadded Base64
 long_description = file: README.rst
 keywords = base64
@@ -14,3 +14,10 @@ classifiers =
 [options]
 py_modules = unpaddedbase64
 python_requires = >=3.6
+
+[mypy]
+python_version = 3.6
+
+[flake8]
+max-line-length = 88
+extend-ignore = E203, W503
